# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db.py  func_url.py  html_utilities.py  py.py  url.py  url_utilities.py
page_analyzer/templates/: base.html  index.html  url_id.html  urls.html
